# RMC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  requirements.txt  weekly-log.md
docs/: requirements-doc.txt
rmc/: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
rmc/docs/: Makefile
rmc/docs/source/: api.rst  conf.py  distributions.rst  examples.rst  index.rst  overview.rst  references.bib  usage.rst
rmc/examples/: distributions_examples.py  elephant_skeleton2D_HMC.py  funnel_LFIS.py  funnel_SMC.py  funnel_SVGD.py  ionosphere_SMC.py  linear_regression_HMC.py  linear_regression_SMC.py  normMix2D_LFIS.py  simple2D_HMC.py  simple2D_LFIS.py  simple2D_SVGD.py  skeleton2D_HMC.py  sonar_SMC.py  utils_examples.py
rmc/examples/datasets/: elephantz.npy
rmc/examples/utils/: distributions_examples.py
rmc/flax/: models.py  nn_config_dict.py  trainer.py
rmc/modules/: __init__.py  dds.py  lfis.py  pis.py  sampler.py  svgd.py
rmc/rmc/: __init__.py
rmc/rmc/flax/: __init__.py  liouville_flow.py  models.py  nn_config_dict.py  schedule.py  trainer.py  utils.py
rmc/rmc/modules/: energy.py  lfis.py  sampler.py  svgd.py
rmc/rmc/utils/: config_dict.py  energy.py  kernels.py  math_utils.py  schedule.py
rmc/test/: test_density.py  test_kernels.py  test_lfis.py  test_packdist.py  test_sampler.py  test_schedule.py  test_utils.py
rmc/utils/: __init__.py  config_dict.py  density.py  helpers.py  math_utils.py  packed_distributions.py  plotting.py  schedule.py  schedule_diffusion.py
(+32 files in other folders)
